--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,9 @@
 	<!-- navbar -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
 		<div class="container">
-			<a class="navbar-brand" href="/">Home</a>
+			<a class="navbar-brand" href="/"><img
+				src="https://seeklogo.com/images/R/rakuten-logo-A75F21521D-seeklogo.com.png" width="30"
+				height="30" alt="Home"></a>
 			<button class="navbar-toggler mr-0" type="button" data-toggle="collapse"
 				data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false"
 				aria-label="Toggle navigation">
