--- a/src/main/resources/templates/sign-up2.html
+++ b/src/main/resources/templates/sign-up2.html
@@ -15,7 +15,6 @@
 	crossorigin="anonymous">
 <!-- Custom styles for this template -->
 <!-- Latest compiled and minified CSS -->
-
 <style>
 .container {
 	max-width: 960px;
@@ -39,85 +38,71 @@
 					<div class="row">
 						<div class="col-md-6 mb-3">
 							<label for="firstName">First name</label> <input type="text" class="form-control"
-								id="firstName" placeholder="" value="" th:field="*{firstname}" required>
+								id="firstName" placeholder="" value="" th:field="*{firstname}">
 							<div class="invalid-feedback">Valid first name is required.</div>
 						</div>
 						<div class="col-md-6 mb-3">
 							<label for="lastName">Last name</label> <input type="text" class="form-control" id="lastName"
-								placeholder="" value="" th:field="*{lastname}" required>
+								placeholder="" value="" th:field="*{lastname}">
 							<div class="invalid-feedback">Valid last name is required.</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6 mb-3 ">
 							<label for="" class="d-block">Gender</label>
-							<div class="form-check form-check-inline align-middle mr-6">
-								<input class="form-check-input" type="radio" name="gender" id="male" value="male"> <label
-									class="form-check-label" for="male">Male</label>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="genderOptions" id="male" value="male"
+									th:field="*{gender}"> <label class="form-check-label" for="male">Male</label>
 							</div>
-							<div class="form-check form-check-inline align-middle">
-								<input class="form-check-input" type="radio" name="gender" id="female" value="female">
-								<label class="form-check-label" for="female">Female</label>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="genderOptions" id="female" value="female"
+									th:field="*{gender}"> <label class="form-check-label" for="female">Female</label>
 							</div>
 						</div>
 						<div class="col-md-6 mb-3">
 							<label for="country">Country</label> <input type="text" class="form-control" id="country"
-								placeholder="" value="" > 
+								placeholder="" value="">
 							<div class="invalid-feedback">Valid last name is required.</div>
 						</div>
 					</div>
-					<!-- <div class="row">
-						<div class="col-md-5 mb-3">
-							<label for="country">Country</label> <select class="custom-select d-block w-100" id="country"
-								required>
-								<option value="">Choose...</option>
-								<option>United States</option>
-							</select>
-							<div class="invalid-feedback">Please select a valid country.</div>
-						</div>
-						<div class="col-md-4 mb-3">
-							<label for="state">State</label> <select class="custom-select d-block w-100" id="state"
-								required>
-								<option value="">Choose...</option>
-								<option>California</option>
-							</select>
-							<div class="invalid-feedback">Please provide a valid state.</div>
-						</div>
-						<div class="col-md-3 mb-3">
-							<label for="zip">Zip</label> <input type="text" class="form-control" id="zip" placeholder=""
-								required>
-							<div class="invalid-feedback">Zip code required.</div>
-						</div>
+					<hr class="mb-4">
+					<label for="programming_language" class="d-block">Programming Language</label>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="python" value="python"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="python">Python</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="java" value="java"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="java">Java</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="c" value="c"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="c">C</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="cplusplus" value="cplusplus"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="cplusplus">C++</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="kotlin" value="kotlin"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="kotlin">Kotlin</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="javascript" value="javascript"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="javascript">JavaScript</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="go" value="go"
+							th:field="*{programmingLanguage}"> <label class="form-check-label" for="go">Go</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="checkbox" id="other" value="other"
+							aria-label="Checkbox for following text input" th:field="*{programmingLanguage}"> 
+						<label class="form-check-label" for="other">Other</label> 
+						<input type="text" class="form-control form-control-sm ml-2 other" id="oth" aria-label="Text input with checkbox">
 					</div>
 					<hr class="mb-4">
-					<div class="custom-control custom-checkbox">
-						<input type="checkbox" class="custom-control-input" id="same-address"> <label
-							class="custom-control-label" for="same-address">Shipping address is the same as my
-							billing address</label>
-					</div>
-					<div class="custom-control custom-checkbox">
-						<input type="checkbox" class="custom-control-input" id="save-info"> <label
-							class="custom-control-label" for="save-info">Save this information for next time</label>
-					</div>
-					<hr class="mb-4">
-					<h4 class="mb-3">Payment</h4>
-					<div class="d-block my-3">
-						<div class="custom-control custom-radio">
-							<input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked
-								required> <label class="custom-control-label" for="credit">Credit card</label>
-						</div>
-						<div class="custom-control custom-radio">
-							<input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-							<label class="custom-control-label" for="debit">Debit card</label>
-						</div>
-						<div class="custom-control custom-radio">
-							<input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-							<label class="custom-control-label" for="paypal">PayPal</label>
-						</div>
-					</div>
-					 -->
-					<hr class="mb-4">
-					<button class="btn btn-primary btn-lg btn-block" type="submit">Confirm</button>
+					<button class="btn btn-primary btn-lg btn-block" type="submit" onclick="check()">Confirm</button>
 				</form>
 			</div>
 		</div>
@@ -136,14 +121,26 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
+		
+	<script>
+	function check() {
+		var otherCheckBox = document.getElementById("other");
+	   var checked = otherCheckBox.checked;
+	   if(checked){
+		   var otherStr = document.getElementById("oth").value;
+		   console.log(otherStr);
+		   alert(otherStr);
+		   otherCheckBox.value = otherStr;
+	   }
+	}
 	
+	</script>
 	<script>
 		window.jQuery
 				|| document
 						.write(
 								'<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
 	</script>
-	
 	<script>
 		// Example starter JavaScript for disabling form submissions if there are invalid fields
 						(
