url problem solve

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -46,7 +46,7 @@ input[type=text] {
 		</div>
 		<div class="row justify-content-md-center">
 			<div class="col-md-8 order-md-1">
-				<form class="needs-validation" method="POST" th:action="@{/signup-succeeded}">
+				<form class="needs-validation" method="POST" th:action="@{/confirm}">
 					<div class="row form-group">
 						<div class="col-md-12 ">
 							<label for="username">Username</label>
