--- a/src/main/resources/templates/sign-up2.html
+++ b/src/main/resources/templates/sign-up2.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="row justify-content-md-center">
 			<div class="col-md-8 order-md-1">
-				<form class="needs-validation" method="POST" novalidate th:action="@{/confirm}"
+				<form class="needs-validation" method="POST" novalidate th:action="@{/signup2}"
 					th:object="${user}">
 					<div class="row">
 						<div class="col-md-6 mb-3">
