--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,10 +46,16 @@ input:focus::-webkit-input-placeholder {
 		<button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
 			th:text="Login"></button>
 		<p class="mt-2" style="font-size: 20;">
-			Or&nbsp;&nbsp;<a href="/">Register</a>
+			Or&nbsp;&nbsp;<a href="/signup">Register</a>
 		</p>
-		<p class="mt-4 mb-3 text-muted">&copy; 2018-2019</p>
+		<footer class="my-3 pt-4 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2018-2019</p>
+			<ul class="list-inline">
+				<li class="list-inline-item"><a href="/">Home</a></li>
+			</ul>
+		</footer>
 	</form>
+	
 	<!-- boostrap -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
