--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -38,40 +38,39 @@
 </head>
 <body>
 	<!-- navbar -->
-	<nav class="navbar navbar-expand-lg shadow-sm ">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
 		<div class="container">
-			<a class="navbar-brand" href="/"> <img
-				src="https://seeklogo.com/images/R/rakuten-logo-A75F21521D-seeklogo.com.png" width="30"
-				height="30" alt="Home">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<a class="navbar-brand" href="/"><img src="/images/rlogo.jpg" width="40" height="40"
+				alt="Home"><span class="align-middle font-weight-bold text-monospace">TechHelp</span></a>
+			<button class="navbar-toggler mr-0" type="button" data-toggle="collapse"
+				data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false"
+				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<nav class="my-2 my-md-0 mr-md-3 collapse navbar-collapse">
-				<a class="p-2 text-dark" href="/about">About</a> <a class="p-2 text-dark" href="/contact">Contact</a>
-				<a class="p-2 text-dark" href="/to-do" sec:authorize="isAuthenticated()">TO-DO</a> <a
-					class="p-2 text-dark" href="/show" sec:authorize="hasRole('ROLE_ADMIN')">All data</a>
-			</nav>
-			<!-- <form th:action="
-						@{/logout}" method="post"
-				sec:authorize="isAuthenticated()">
-
-				<button class="btn btn-light my-2 my-sm-0" name="Submit"
-					value="Logout" type="Submit" th:text="Logout"></button>
-			</form> -->
+			<div class="collapse navbar-collapse mr-0" id="navbarsExample07">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item"><a class="p-2 text-dark" href="/about">About</span></a></li>
+					<li class="nav-item"><a class="p-2 text-dark" href="/contact">Contact</a></li>
+					<li class="nav-item"><a class="p-2 text-dark" href="/to-do"
+						sec:authorize="isAuthenticated()">Help List</a></li>
+					<li class="nav-item dropdown"><a class="p-2 text-dark" href="/show"
+						sec:authorize="hasRole('ROLE_ADMIN')">All data</a></li>
+				</ul>
+			</div>
 			<div class="d-inline" sec:authorize="isAuthenticated()">
 				<span class="navbar-text mr-2">Hi! </span> <span class="navbar-text mr-2"
 					th:text="${currentUser.firstname}"> firstname </span> <span class="navbar-text mr-2"
 					th:text="${currentUser.lastname}"> lastname </span>
 			</div>
-			<a class="nav-link" href="/logout" sec:authorize="isAuthenticated()">
-				<button class="btn btn-outline-primary my-2 my-sm-0" value="Logout">Logout</button>
-			</a> <a class="nav-link" href="/login" sec:authorize="isAnonymous()">
-				<button class="btn btn-outline-primary my-2 my-sm-0" value="login">Login</button>
-			</a> <a class="nav-link" href="/signup" sec:authorize="isAnonymous()">
-				<button class="btn btn-outline-primary my-2 my-sm-0" value="Sign Up">Sign Up</button>
-			</a>
+			<div class="d-inline">
+				<a class="nav-link d-inline" href="/logout" sec:authorize="isAuthenticated()">
+					<button class="btn btn-outline-primary my-2 my-sm-0" value="Logout">Logout</button>
+				</a> <a class="nav-link d-inline" href="/login" sec:authorize="isAnonymous()">
+					<button class="btn btn-outline-primary my-2 my-sm-0" value="login">Login</button>
+				</a> <a class="nav-link d-inline" href="/signup" sec:authorize="isAnonymous()">
+					<button class="btn btn-outline-primary my-2 my-sm-0" value="Sign Up">Sign Up</button>
+				</a>
+			</div>
 		</div>
 	</nav>
 	<div class="container-fluid">
