--- a/src/main/resources/templates/sign-up2.html
+++ b/src/main/resources/templates/sign-up2.html
@@ -60,9 +60,19 @@
 							</div>
 						</div>
 						<div class="col-md-6 mb-3">
-							<label for="country">Country</label> <input type="text" class="form-control" id="country"
-								placeholder="" value="">
-							<div class="invalid-feedback">Valid last name is required.</div>
+							<label for="country">Country</label>
+							 <select class="form-control" id="country" name="country" th:field="*{country}">
+								<option value="Japan" th:selected="selected">Japan</option>
+								<option value="Taiwan" th:selected="selected">Taiwan</option>
+								<option value="India" th:selected="selected">India</option>
+								<option value="Korea" th:selected="selected">Korea</option>
+								<option value="United States" th:selected="selected">United States</option>
+								<option value="United Kingdom" th:selected="selected">United Kingdom</option>
+								<option value="Afghanistan" th:selected="selected">Afghanistan</option>
+								<option value="Albania" th:selected="selected">Albania</option>
+								<option value="Algeria" th:selected="selected">Algeria</option>
+								<option value="American Samoa" th:selected="selected">American Samoa</option>
+							</select>
 						</div>
 					</div>
 					<hr class="mb-4">
@@ -97,21 +107,24 @@
 					</div>
 					<div class="form-check form-check-inline">
 						<input class="form-check-input" type="checkbox" id="other" value="other"
-							aria-label="Checkbox for following text input" th:field="*{programmingLanguage}"> 
-						<label class="form-check-label" for="other">Other</label> 
-						<input type="text" class="form-control form-control-sm ml-2 other" id="oth" aria-label="Text input with checkbox">
+							aria-label="Checkbox for following text input" th:field="*{programmingLanguage}"> <label
+							class="form-check-label" for="other">Other</label> <input type="text"
+							class="form-control form-control-sm ml-2 other" id="oth"
+							aria-label="Text input with checkbox">
 					</div>
 					<hr class="mb-4">
-					<button class="btn btn-primary btn-lg btn-block" type="submit" onclick="check()">Confirm</button>
+					<div class="row text-center">
+						<div class="col-md-8 text-center mx-auto">
+							<button class="btn btn-primary btn-lg btn-block" type="submit" onclick="check()">Confirm</button>
+						</div>
+					</div>
 				</form>
 			</div>
 		</div>
-		<footer class="my-5 pt-5 text-muted text-center text-small">
-			<p class="mb-1">&copy; 2017-2018 Company Name</p>
+		<footer class="my-3 pt-4 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2018-2019</p>
 			<ul class="list-inline">
-				<li class="list-inline-item"><a href="#">Privacy</a></li>
-				<li class="list-inline-item"><a href="#">Terms</a></li>
-				<li class="list-inline-item"><a href="#">Support</a></li>
+				<li class="list-inline-item"><a href="/">Home</a></li>
 			</ul>
 		</footer>
 	</div>
@@ -121,19 +134,15 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
-		
 	<script>
-	function check() {
-		var otherCheckBox = document.getElementById("other");
-	   var checked = otherCheckBox.checked;
-	   if(checked){
-		   var otherStr = document.getElementById("oth").value;
-		   console.log(otherStr);
-		   alert(otherStr);
-		   otherCheckBox.value = otherStr;
-	   }
-	}
-	
+		function check() {
+			var otherCheckBox = document.getElementById("other");
+			var checked = otherCheckBox.checked;
+			if (checked) {
+				var otherStr = document.getElementById("oth").value;
+				otherCheckBox.value = otherStr;
+			}
+		}
 	</script>
 	<script>
 		window.jQuery
