--- a/src/main/resources/templates/signup-succeeded.html
+++ b/src/main/resources/templates/signup-succeeded.html
@@ -32,7 +32,7 @@
 		<div class="col-md-12 text-center pt-5">
 			<img src="/images/succeded.png" class="" alt="error" width="200" height="200">
 			<h1 class="mt-3">Sign Up Succeeded !</h1>
-			<h2>Go to <a href="/">Home Page</a> or <a href="/login">Login</a>now</h2>
+			<h2>Go to <a href="/">Home Page</a> or <a href="/login">Login</a>&nbsp;now</h2>
 		</div>
 	</div>
 </body>
