add validation groups

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -111,7 +111,7 @@ input[type=text] {
 							<div class="col-md-10 mb-3">
 								<input type="text"
 									class="form-control border-bottom border-primary rounded-0 form-control-plaintext ro"
-									id="programmingLanguage" th:value="${session.user.programmingLanguage}" disabled>
+									id="progLang" th:value="${session.user.progLang}" disabled>
 							</div>
 						</div>
 					</div>
