--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,6 +82,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- current user prog_lan is empty -->
 			<div class="row justify-content-center " th:if="${languages} != null">
 				<h4>check anyone need your help ?</h4>
 			</div>
